zod_gen_derive/tests/ui/content_without_tag.stderr
error: #[serde(tag = "...", content = "...")] must be used together
 --> tests/ui/content_without_tag.rs
  |
  | #[serde(content = "c")]
  |         ^^^^^^^
